prompt: When I click on the grid in the tie ups, I different grid location is selected. Please fix it so the correct grid location in the tie-up gets selected when I click on it.

--- a/loom-designer.html
+++ b/loom-designer.html
@@ -290,7 +290,7 @@
             updateGrids();
         }
 
-        function toggleTieup(treadle, shaft) {
+        function toggleTieup(shaft, treadle) {
             state.tieup[treadle][shaft] = !state.tieup[treadle][shaft];
             updateGrids();
         }
