--- a/loom-designer.html
+++ b/loom-designer.html
@@ -75,6 +75,55 @@
             background-color: #45a049;
         }
 
+        .color-controls {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #f9f9f9;
+            border-radius: 4px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+        }
+
+        .color-section {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .color-section h3 {
+            margin: 0 0 10px 0;
+            color: #333;
+            font-size: 16px;
+        }
+
+        .color-bar {
+            display: flex;
+            gap: 2px;
+            flex-wrap: wrap;
+        }
+
+        .color-item {
+            width: 30px;
+            height: 30px;
+            border: 2px solid #333;
+            cursor: pointer;
+            position: relative;
+        }
+
+        .color-item:hover {
+            opacity: 0.7;
+        }
+
+        .color-item input[type="color"] {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border: none;
+            cursor: pointer;
+            opacity: 0;
+        }
+
         .loom-grid {
             display: grid;
             grid-template-columns: auto 1fr;
@@ -208,6 +257,17 @@
             <input type="file" id="importFile" accept=".json" style="display: none;" onchange="importPattern(event)">
         </div>
 
+        <div class="color-controls">
+            <div class="color-section">
+                <h3>Warp Thread Colors</h3>
+                <div id="warpColors" class="color-bar"></div>
+            </div>
+            <div class="color-section">
+                <h3>Weft Thread Colors</h3>
+                <div id="weftColors" class="color-bar"></div>
+            </div>
+        </div>
+
         <div class="loom-grid">
             <div class="grid-label" style="grid-column: 1; grid-row: 1;">Threading →</div>
             <div class="threading-section">
@@ -236,7 +296,8 @@
                 <li><strong>Threading:</strong> Click cells to assign each warp thread to a shaft (vertical columns = threads, horizontal rows = shafts)</li>
                 <li><strong>Tie-Up:</strong> Click to connect treadles to shafts (columns = treadles, rows = shafts)</li>
                 <li><strong>Treadling:</strong> Click to set the sequence of treadle presses (columns = treadles, rows = picks/rows of weaving)</li>
-                <li><strong>Drawdown:</strong> The resulting weave pattern is automatically calculated. Blue = warp on top, Orange = weft on top</li>
+                <li><strong>Thread Colors:</strong> Click any colored square to change the color of individual warp threads or weft picks</li>
+                <li><strong>Drawdown:</strong> The resulting weave pattern is automatically calculated using your thread colors</li>
             </ul>
         </div>
     </div>
@@ -249,7 +310,9 @@
             picks: 32,
             threading: [],
             tieup: [],
-            treadling: []
+            treadling: [],
+            warpColors: [],
+            weftColors: []
         };
 
         function initializeState() {
@@ -266,6 +329,14 @@
             state.threading = Array(warpThreads).fill(null).map(() => Array(shafts).fill(false));
             state.tieup = Array(treadles).fill(null).map(() => Array(shafts).fill(false));
             state.treadling = Array(picks).fill(null).map(() => Array(treadles).fill(false));
+
+            // Initialize colors if needed
+            if (state.warpColors.length !== warpThreads) {
+                state.warpColors = Array(warpThreads).fill('#2196F3');
+            }
+            if (state.weftColors.length !== picks) {
+                state.weftColors = Array(picks).fill('#FF9800');
+            }
         }
 
         function createGrid(containerId, rows, cols, clickHandler) {
@@ -283,6 +354,54 @@
                     cell.onclick = () => clickHandler(row, col);
                     container.appendChild(cell);
                 }
+            }
+        }
+
+        function createColorPickers() {
+            const warpColorsContainer = document.getElementById('warpColors');
+            const weftColorsContainer = document.getElementById('weftColors');
+
+            warpColorsContainer.innerHTML = '';
+            weftColorsContainer.innerHTML = '';
+
+            // Create warp color pickers
+            for (let i = 0; i < state.warpThreads; i++) {
+                const colorItem = document.createElement('div');
+                colorItem.className = 'color-item';
+                colorItem.style.backgroundColor = state.warpColors[i];
+                colorItem.title = `Warp thread ${i + 1}`;
+
+                const colorInput = document.createElement('input');
+                colorInput.type = 'color';
+                colorInput.value = state.warpColors[i];
+                colorInput.addEventListener('change', (e) => {
+                    state.warpColors[i] = e.target.value;
+                    colorItem.style.backgroundColor = e.target.value;
+                    updateDrawdown();
+                });
+
+                colorItem.appendChild(colorInput);
+                warpColorsContainer.appendChild(colorItem);
+            }
+
+            // Create weft color pickers
+            for (let i = 0; i < state.picks; i++) {
+                const colorItem = document.createElement('div');
+                colorItem.className = 'color-item';
+                colorItem.style.backgroundColor = state.weftColors[i];
+                colorItem.title = `Weft pick ${i + 1}`;
+
+                const colorInput = document.createElement('input');
+                colorInput.type = 'color';
+                colorInput.value = state.weftColors[i];
+                colorInput.addEventListener('change', (e) => {
+                    state.weftColors[i] = e.target.value;
+                    colorItem.style.backgroundColor = e.target.value;
+                    updateDrawdown();
+                });
+
+                colorItem.appendChild(colorInput);
+                weftColorsContainer.appendChild(colorItem);
             }
         }
 
@@ -365,9 +484,9 @@
 
                 const isWarpUp = calculateDrawdownCell(pick, thread);
                 if (isWarpUp) {
-                    cell.classList.add('warp');
+                    cell.style.backgroundColor = state.warpColors[thread];
                 } else {
-                    cell.classList.add('weft');
+                    cell.style.backgroundColor = state.weftColors[pick];
                 }
             });
         }
@@ -400,11 +519,13 @@
             createGrid('tieup', state.shafts, state.treadles, toggleTieup);
             createGrid('treadling', state.picks, state.treadles, toggleTreadling);
             createGrid('drawdown', state.picks, state.warpThreads, () => {});
+            createColorPickers();
             updateGrids();
         }
 
         function resetAll() {
             initializeState();
+            createColorPickers();
             updateGrids();
         }
 
@@ -442,7 +563,9 @@
                 },
                 threading: state.threading,
                 tieup: state.tieup,
-                treadling: state.treadling
+                treadling: state.treadling,
+                warpColors: state.warpColors,
+                weftColors: state.weftColors
             };
 
             const dataStr = JSON.stringify(exportData, null, 2);
@@ -481,11 +604,20 @@
                     state.tieup = importData.tieup;
                     state.treadling = importData.treadling;
 
+                    // Load colors if they exist in the import data
+                    if (importData.warpColors) {
+                        state.warpColors = importData.warpColors;
+                    }
+                    if (importData.weftColors) {
+                        state.weftColors = importData.weftColors;
+                    }
+
                     // Recreate grids and update display
                     createGrid('threading', state.shafts, state.warpThreads, toggleThreading);
                     createGrid('tieup', state.shafts, state.treadles, toggleTieup);
                     createGrid('treadling', state.picks, state.treadles, toggleTreadling);
                     createGrid('drawdown', state.picks, state.warpThreads, () => {});
+                    createColorPickers();
                     updateGrids();
 
                     alert('Pattern imported successfully!');
