prompt: In order to make this easier for the user, modify the program so that where you select the thread colors is at the column of the threading or the row of the threadling.

--- a/loom-designer.html
+++ b/loom-designer.html
@@ -75,44 +75,29 @@
             background-color: #45a049;
         }
 
-        .color-controls {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #f9f9f9;
-            border-radius: 4px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
+        .warp-color-bar {
+            display: inline-grid;
+            gap: 1px;
+            margin-bottom: 5px;
         }
 
-        .color-section {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .color-section h3 {
-            margin: 0 0 10px 0;
-            color: #333;
-            font-size: 16px;
-        }
-
-        .color-bar {
-            display: flex;
-            gap: 2px;
-            flex-wrap: wrap;
+        .weft-color-bar {
+            display: inline-grid;
+            gap: 1px;
+            margin-right: 5px;
         }
 
         .color-item {
-            width: 30px;
-            height: 30px;
-            border: 2px solid #333;
+            width: 20px;
+            height: 20px;
+            border: 1px solid #333;
             cursor: pointer;
             position: relative;
         }
 
         .color-item:hover {
             opacity: 0.7;
+            box-shadow: 0 0 3px rgba(0,0,0,0.5);
         }
 
         .color-item input[type="color"] {
@@ -257,20 +242,10 @@
             <input type="file" id="importFile" accept=".json" style="display: none;" onchange="importPattern(event)">
         </div>
 
-        <div class="color-controls">
-            <div class="color-section">
-                <h3>Warp Thread Colors</h3>
-                <div id="warpColors" class="color-bar"></div>
-            </div>
-            <div class="color-section">
-                <h3>Weft Thread Colors</h3>
-                <div id="weftColors" class="color-bar"></div>
-            </div>
-        </div>
-
         <div class="loom-grid">
             <div class="grid-label" style="grid-column: 1; grid-row: 1;">Threading →</div>
             <div class="threading-section">
+                <div id="warpColors" class="warp-color-bar"></div>
                 <div id="threading" class="grid"></div>
             </div>
 
@@ -286,7 +261,10 @@
 
             <div class="treadling-section">
                 <div class="grid-label">Treadling</div>
-                <div id="treadling" class="grid"></div>
+                <div style="display: flex; gap: 5px;">
+                    <div id="weftColors" class="weft-color-bar"></div>
+                    <div id="treadling" class="grid"></div>
+                </div>
             </div>
         </div>
 
@@ -296,7 +274,7 @@
                 <li><strong>Threading:</strong> Click cells to assign each warp thread to a shaft (vertical columns = threads, horizontal rows = shafts)</li>
                 <li><strong>Tie-Up:</strong> Click to connect treadles to shafts (columns = treadles, rows = shafts)</li>
                 <li><strong>Treadling:</strong> Click to set the sequence of treadle presses (columns = treadles, rows = picks/rows of weaving)</li>
-                <li><strong>Thread Colors:</strong> Click any colored square to change the color of individual warp threads or weft picks</li>
+                <li><strong>Thread Colors:</strong> Click the colored squares above the threading (warp) or beside the treadling (weft) to change colors</li>
                 <li><strong>Drawdown:</strong> The resulting weave pattern is automatically calculated using your thread colors</li>
             </ul>
         </div>
@@ -363,6 +341,14 @@
 
             warpColorsContainer.innerHTML = '';
             weftColorsContainer.innerHTML = '';
+
+            // Set grid layout for warp colors (horizontal)
+            warpColorsContainer.style.gridTemplateColumns = `repeat(${state.warpThreads}, 20px)`;
+            warpColorsContainer.style.gridTemplateRows = '20px';
+
+            // Set grid layout for weft colors (vertical)
+            weftColorsContainer.style.gridTemplateColumns = '20px';
+            weftColorsContainer.style.gridTemplateRows = `repeat(${state.picks}, 20px)`;
 
             // Create warp color pickers
             for (let i = 0; i < state.warpThreads; i++) {
